updated AML notevooks

--- a/fsidemo/artifacts/amlnotebooks/1. Registering Banking Churn Prediction Dataset in Azure ML.ipynb
+++ b/fsidemo/artifacts/amlnotebooks/1. Registering Banking Churn Prediction Dataset in Azure ML.ipynb
@@ -43,6 +43,33 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install azure-mgmt-resource==10.2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install azure-mgmt-resource"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install azure-mgmt-resource==19.0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "gather": {
      "logged": 1624911752273
@@ -53,6 +80,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3f01ab49-a56f-4ee7-97fa-d23155156b42\n",
+      "media-test\n",
+      "amlws-zquzavzvs5x6m-pm0208\n",
       "Workspace configuration succeeded. Skip the workspace creation steps below\n"
      ]
     }
@@ -63,9 +93,14 @@
     "from azureml.core import Workspace\n",
     "import GlobalVariables\n",
     "\n",
+    "print(GlobalVariables.subscription_id)\n",
+    "print(GlobalVariables.resource_group)\n",
+    "print(GlobalVariables.workspace_name)\n",
     "\n",
     "try:\n",
-    "    workspace = Workspace(subscription_id = GlobalVariables.subscription_id, resource_group = GlobalVariables.resource_group, workspace_name = GlobalVariables.workspace_name)\n",
+    "    workspace = Workspace(subscription_id =GlobalVariables.subscription_id, \n",
+    "                          resource_group =GlobalVariables.resource_group,\n",
+    "                          workspace_name =GlobalVariables.workspace_name)\n",
     "    # write the details of the workspace to a configuration file to the notebook library\n",
     "    print(\"Workspace configuration succeeded. Skip the workspace creation steps below\")\n",
     "except:\n",
@@ -81,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "gather": {
      "logged": 1624911773069
@@ -91,10 +126,10 @@
     {
      "data": {
       "text/plain": [
-       "<azure.storage.blob._blob_client.BlobClient at 0x7f6a44e1cee0>"
+       "<azure.storage.blob._blob_client.BlobClient at 0x7fba38149898>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "gather": {
      "logged": 1624911785728
@@ -144,16 +179,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Uploading an estimated of 4 files\n",
-      "Uploading ./data/.amlignore\n",
-      "Uploaded ./data/.amlignore, 1 files out of an estimated total of 4\n",
-      "Uploading ./data/.amlignore.amltmp\n",
-      "Uploaded ./data/.amlignore.amltmp, 2 files out of an estimated total of 4\n",
-      "Uploading ./data/retail_banking_customer_churn.csv\n",
-      "Uploaded ./data/retail_banking_customer_churn.csv, 3 files out of an estimated total of 4\n",
+      "Uploading an estimated of 2 files\n",
       "Uploading ./data/prepared_customer_churn_data.csv\n",
-      "Uploaded ./data/prepared_customer_churn_data.csv, 4 files out of an estimated total of 4\n",
-      "Uploaded 4 files\n"
+      "Uploaded ./data/prepared_customer_churn_data.csv, 1 files out of an estimated total of 2\n",
+      "Uploading ./data/retail_banking_customer_churn_data.csv\n",
+      "Uploaded ./data/retail_banking_customer_churn_data.csv, 2 files out of an estimated total of 2\n",
+      "Uploaded 2 files\n"
      ]
     }
    ],
@@ -165,13 +196,13 @@
     " \n",
     "# Create a project_folder if it doesn't exist\n",
     "if not os.path.isdir('data'):\n",
-    " os.mkdir('data')\n",
+    "    os.mkdir('data')\n",
     " \n",
     " \n",
     "ds = workspace.get_default_datastore()\n",
     "ds.upload(src_dir='./data', target_path='retail_banking', overwrite=True, show_progress=True)\n",
     " \n",
-    "final_df = Dataset.Tabular.from_delimited_files(path=ds.path('retail_banking/retail_banking_customer_churn.csv'))"
+    "final_df = Dataset.Tabular.from_delimited_files(path=ds.path('retail_banking/retail_banking_customer_churn_data.csv'))"
    ]
   },
   {
@@ -183,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "gather": {
      "logged": 1624911786233
@@ -200,6 +231,13 @@
     "                                 tags= {'type': 'Banking', 'date':'2020'},\n",
     "                                 create_new_version=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -207,9 +245,9 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3.8 - AzureML",
+   "display_name": "Python 3.6 - AzureML",
    "language": "python",
-   "name": "python38-azureml"
+   "name": "python3-azureml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -221,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.6.9"
   },
   "microsoft": {
    "host": {
