--- a/fsidemo/artifacts/amlnotebooks/6. Language Translation for Bank Incident Reports using Microsoft Translator.ipynb
+++ b/fsidemo/artifacts/amlnotebooks/6. Language Translation for Bank Incident Reports using Microsoft Translator.ipynb
@@ -21,23 +21,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "nteract": {
@@ -66,7 +49,7 @@
    "execution_count": 1,
    "metadata": {
     "gather": {
-     "logged": 1627419399865
+     "logged": 1627937975976
     }
    },
    "outputs": [],
@@ -76,7 +59,9 @@
     "import json\n",
     "import os\n",
     "from os import listdir\n",
-    "from os.path import isfile, join, splitext"
+    "from os.path import isfile, join, splitext\n",
+    "import glob\n",
+    "import shutil"
    ]
   },
   {
@@ -94,7 +79,16 @@
    "execution_count": 2,
    "metadata": {
     "gather": {
-     "logged": 1627419400099
+     "logged": 1627937976182
+    },
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    },
+    "nteract": {
+     "transient": {
+      "deleting": false
+     }
     }
    },
    "outputs": [
@@ -102,7 +96,110 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user-b4release/code/Users/demo-fsi-user/notebooks/input-json-files//\n"
+      "BASE_PATH:  /mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users\n",
+      "YOUR_PATH:  /mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files\n",
+      "exists!\n",
+      "old_file_path:  /mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/202045000.json\n",
+      "new_file_path:  /mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files/202045000.json\n",
+      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files/202045000.json  already exists!\n",
+      "old_file_path:  /mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/202045001.json\n",
+      "new_file_path:  /mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files/202045001.json\n",
+      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files/202045001.json  already exists!\n",
+      "old_file_path:  /mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/202045002.json\n",
+      "new_file_path:  /mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files/202045002.json\n",
+      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files/202045002.json  already exists!\n",
+      "old_file_path:  /mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/202045003.json\n",
+      "new_file_path:  /mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files/202045003.json\n",
+      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files/202045003.json  already exists!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "import shutil\n",
+    "\n",
+    "BASE_PATH = os.getcwd()\n",
+    "print('BASE_PATH: ',BASE_PATH)\n",
+    "\n",
+    "FOLDER_NAME = 'input-json-files'\n",
+    "\n",
+    "NEW_PATH = BASE_PATH+'/'+FOLDER_NAME\n",
+    "print('YOUR_PATH: ',NEW_PATH)\n",
+    "\n",
+    "# LIST_OF_FILES=['logs_1.png','logs_2.png','logs_3.png']\n",
+    "# with file extension\n",
+    "EXT = 'json'\n",
+    "LIST_OF_FILES = [ f.split(\"/\")[-1] for f in glob.glob(BASE_PATH+'/*.'+EXT)]\n",
+    "\n",
+    "\n",
+    "if os.path.isdir(NEW_PATH):    \n",
+    "    print('exists!')\n",
+    "else:\n",
+    "    print('created path: ',NEW_PATH)    \n",
+    "    os.mkdir(NEW_PATH)\n",
+    "\n",
+    "    \n",
+    "for f in LIST_OF_FILES:\n",
+    "    new_file_path = NEW_PATH+'/'+f\n",
+    "    old_file_path = BASE_PATH+'/'+f    \n",
+    "    print('old_file_path: ',old_file_path)\n",
+    "    print('new_file_path: ',new_file_path)\n",
+    "    if os.path.isfile(new_file_path):\n",
+    "        print(new_file_path,' already exists!')\n",
+    "    else:\n",
+    "        print('copying file ',f,' to folder ',FOLDER_NAME)\n",
+    "        shutil.move(old_file_path,NEW_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "gather": {
+     "logged": 1627937976401
+    },
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    },
+    "nteract": {
+     "transient": {
+      "deleting": false
+     }
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# filess = [f for f in listdir(os.getcwd()+\"/input-json-files\") if isfile(join(os.getcwd()+\"/input-json-files\", f))]\n",
+    "# print(filess)\n",
+    "\n",
+    "# for f in filess:\n",
+    "#     new_file_path = BASE_PATH+'/'+f\n",
+    "#     old_file_path = NEW_PATH+'/'+f    \n",
+    "#     print('old_file_path: ',old_file_path)\n",
+    "#     print('new_file_path: ',new_file_path)\n",
+    "#     if os.path.isfile(new_file_path):\n",
+    "#         print(new_file_path,' already exists!')\n",
+    "#     else:\n",
+    "#         print('copying file ',f,' to folder ',FOLDER_NAME)\n",
+    "#         shutil.copy(old_file_path,BASE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "gather": {
+     "logged": 1627937976569
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files//\n"
      ]
     }
    ],
@@ -124,10 +221,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "gather": {
-     "logged": 1627419400313
+     "logged": 1627937976748
     },
     "jupyter": {
      "outputs_hidden": false,
@@ -146,10 +243,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "gather": {
-     "logged": 1627419400497
+     "logged": 1627937976823
     }
    },
    "outputs": [],
@@ -165,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "gather": {
      "logged": 1627419401254
@@ -176,7 +273,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user-b4release/code/Users/demo-fsi-user/notebooks/input-json-files//202045000.json\n",
+      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files//202045000.json\n",
+      "['{\"CaseId\": \"202045000\", \"EventDate\": \"01-02-15\", \"Empleador\": \"Banco Woodgrove\", \"Ubicaci\\\\u00f3n\": \"Los \\\\u00c1ngeles\", \"Hospitalizado\": 1, \"Amputaci\\\\u00f3n\": 0, \"FinalNarrative\": \"Empleado tropez\\\\u00f3 en una pavimentadora y se fractur\\\\u00f3 la mu\\\\u00f1eca, requiriendo hospitalizaci\\\\u00f3n.\", \"NatureTitle\": \"Fracturas\", \"PartofBodyTitle\": \"Mu\\\\u00f1eca(s)\", \"EventTitle\": \"Ca\\\\u00edda en el mismo nivel debido a tropezar en una superficie irregular\", \"SourceTitle\": \"Irregularidad del suelo\"}']\n",
       "\n",
       "Original JSON\n",
       "\n",
@@ -185,7 +283,8 @@
       "Translated JSON\n",
       "\n",
       "{'CaseId': '202045000', 'EventDate': '01-02-15', 'Employer': 'Woodgrove Bank', 'Location': 'Los Angeles', 'Hospitalized': 1, 'Amputation': 0, 'FinalNarrative': 'Employee tripped on a paver and fractured his wrist, requiring hospitalization.', 'NatureTitle': 'Fractures', 'PartofBodyTitle': 'Wrist(s)', 'EventTitle': 'Fall on the same level due to tripping on an irregular surface', 'SourceTitle': 'Unevenness of the ground'}\n",
-      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user-b4release/code/Users/demo-fsi-user/notebooks/input-json-files//202045001.json\n",
+      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files//202045001.json\n",
+      "['{\"CaseId\": \"202045001\", \"EventDate\": \"01-08-15\", \"Empleador\": \"Woodgrove bank\", \"Ubicaci\\\\u00f3n\": \"Ciudad de Nueva York\", \"Hospitalizado\": 1, \"Amputaci\\\\u00f3n\": 0, \"FinalNarrative\": \"Empleado derram\\\\u00f3 agua en el suelo mientras hac\\\\u00eda caf\\\\u00e9. El empleado luego resbal\\\\u00f3 y cay\\\\u00f3, rompi\\\\u00e9ndose la parte superior izquierda del brazo que requiere cirug\\\\u00eda.\", \"NatureTitle\": \"Fracturas\", \"PartofBodyTitle\": \"Brazo(s) superior(es)\", \"EventTitle\": \"Ca\\\\u00edda en el mismo nivel debido a resbalones\", \"SourceTitle\": \"Piso, n.e.c.\"}']\n",
       "\n",
       "Original JSON\n",
       "\n",
@@ -194,7 +293,8 @@
       "Translated JSON\n",
       "\n",
       "{'CaseId': '202045001', 'EventDate': '01-08-15', 'Employer': 'Woodgrove bank', 'Location': 'New York City', 'Hospitalized': 1, 'Amputation': 0, 'FinalNarrative': 'Employee spilled water on the ground while making coffee. The employee then slipped and fell, breaking the upper left arm requiring surgery.', 'NatureTitle': 'Fractures', 'PartofBodyTitle': 'Upper arm(s)', 'EventTitle': 'Fall at the same level due to slips', 'SourceTitle': 'Floor, n.e.c.'}\n",
-      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user-b4release/code/Users/demo-fsi-user/notebooks/input-json-files//202045002.json\n",
+      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files//202045002.json\n",
+      "['{\"CaseId\": \"202045002\", \"EventDate\": \"13/1/2015\", \"Empleador\": \"Banco Woodgrove\", \"Ubicaci\\\\u00f3n\": \"Charolette\", \"Hospitalizado\": 1, \"Amputaci\\\\u00f3n\": 0, \"FinalNarrative\": \"La empleada se cay\\\\u00f3 cuando sal\\\\u00eda del ba\\\\u00f1o del vest\\\\u00edbulo del edificio.  La empleada cay\\\\u00f3 al suelo y se rompi\\\\u00f3 la cadera.\", \"NatureTitle\": \"Fracturas\", \"PartofBodyTitle\": \"Cadera(s)\", \"EventTitle\": \"Ca\\\\u00edda en el mismo nivel, sin especificar\", \"SourceTitle\": \"Piso, n.e.c.\"}']\n",
       "\n",
       "Original JSON\n",
       "\n",
@@ -203,7 +303,8 @@
       "Translated JSON\n",
       "\n",
       "{'CaseId': '202045002', 'EventDate': '1/13/2015', 'Employer': 'Woodgrove Bank', 'Location': 'Charolette', 'Hospitalized': 1, 'Amputation': 0, 'FinalNarrative': 'The employee fell as she was leaving the bathroom in the lobby of the building.  The employee fell to the ground and broke her hip.', 'NatureTitle': 'Fractures', 'PartofBodyTitle': 'Hip(s)', 'EventTitle': 'Fall at the same level, unspecified', 'SourceTitle': 'Floor, n.e.c.'}\n",
-      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user-b4release/code/Users/demo-fsi-user/notebooks/input-json-files//202045003.json\n",
+      "/mnt/batch/tasks/shared/LS_root/mounts/clusters/demo-fsi-user/code/Users/input-json-files//202045003.json\n",
+      "['{\"CaseId\": \"202045003\", \"EventDate\": \"21/1/2015\", \"Empleador\": \"Banco woodgrove\", \"Ubicaci\\\\u00f3n\": \"Charolette\", \"Hospitalizado\": 1, \"Amputaci\\\\u00f3n\": 0, \"FinalNarrative\": \"Un empleado cay\\\\u00f3 en un piso de concreto y sufri\\\\u00f3 una conmoci\\\\u00f3n cerebral y cortes y contusiones en la cabeza.\", \"NatureTitle\": \"Conmociones cerebrales\", \"PartofBodyTitle\": \"Cerebro\", \"EventTitle\": \"Ca\\\\u00edda en el mismo nivel, sin especificar\", \"SourceTitle\": \"Piso, n.e.c.\"}']\n",
       "\n",
       "Original JSON\n",
       "\n",
@@ -227,6 +328,7 @@
     "        # Reading the data from the JSON file\n",
     "        print(local_path+file)\n",
     "        data = f.readlines()\n",
+    "        print(data)\n",
     "        data = [json.loads(line) for line in data]\n",
     "        pd_data = {k.replace('_', ' ') : v for k, v in data[0].items()}\n",
     "        esp_data = json.dumps(pd_data, ensure_ascii=False).encode('utf8')\n",
