--- a/CDP-Retail/artifacts/environment-setup/notebooks/1 Products Recommendation.ipynb
+++ b/CDP-Retail/artifacts/environment-setup/notebooks/1 Products Recommendation.ipynb
@@ -12,6 +12,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## *Connecting to Azure Synapse Data Warehouse*\n",
+        "<p style=\"font-size:16px; color:#117d30;\">\n",
+           "**DISCLAIMER**\n",
+        " By accessing this code, you acknowledge the code is made available for presentation and demonstration purposes only and that the code: (1) is not subject to SOC 1 and SOC 2 compliance audits; (2) is not designed or intended to be a substitute for the professional advice, diagnosis, treatment, or judgment of a certified financial services professional; (3) is not designed, intended or made available as a medical device; and (4) is not designed or intended to be a substitute for professional medical advice, diagnosis, treatment or judgement. Do not use this code to replace, substitute, or provide professional financial advice or judgment, or to replace, substitute or provide medical advice, diagnosis, treatment or judgement. You are solely responsible for ensuring the regulatory, legal, and/or contractual compliance of any use of the code, including obtaining any authorizations or consents, and any solution you choose to build that incorporates this code in whole or in part.\n",
+        "</p>"
+      ],
+      "attachments": {}
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "<p style=\"font-size:25px; color:black;\"><u><i><b>Product Recommendations</b></i></u></p>\n",
         "<p style=\"font-size:16px; color:#117d30;\">\n",
         "    Product recommendations is a filtering system that predicts and shows the items that a user would likely purchase based on their purchase history.\n",
