Updated in-code disclaimers and license

--- a/fsidemo/artifacts/notebooks/AIML_2_Registering Banking Churn Prediction Dataset in Azure ML.ipynb
+++ b/fsidemo/artifacts/notebooks/AIML_2_Registering Banking Churn Prediction Dataset in Azure ML.ipynb
@@ -18,19 +18,10 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      },
+      "metadata": {},
       "source": [
-        "## Disclaimer\r\n",
-        "\r\n",
-        "By accessing this code, you acknowledge the code is made available for presentation and demonstration purposes only and that the code (1) is not subject to SOC 1 and SOC 2 compliance audits, and (2) is not designed or intended to be a substitute for the professional advice, diagnosis, treatment, or judgment of a certified financial services professional. Do not use this code to replace, substitute, or provide professional financial advice, or judgement. You are solely responsible for ensuring the regulatory, legal, and/or contractual compliance of any use of the code, including obtaining any authorizations or consents, and any solution you choose to build that incorporates this code in whole or in part.\r\n",
-        "\r\n",
-        "© 2021 Microsoft Corporation. All rights reserved"
+        "## *****For Demonstration purpose only, Please customize as per your enterprise security needs and compliances***** \n"
+		"Disclaimer: By accessing this code, you acknowledge the code is made available for presentation and demonstration purposes only and that the code: (1) is not subject to SOC 1 and SOC 2 compliance audits; (2) is not designed or intended to be a substitute for the professional advice, diagnosis, treatment, or judgment of a certified financial services professional; (3) is not designed, intended or made available as a medical device; and (4) is not designed or intended to be a substitute for professional medical advice, diagnosis, treatment or judgement. Do not use this code to replace, substitute, or provide professional financial advice or judgment, or to replace, substitute or provide medical advice, diagnosis, treatment or judgement. You are solely responsible for ensuring the regulatory, legal, and/or contractual compliance of any use of the code, including obtaining any authorizations or consents, and any solution you choose to build that incorporates this code in whole or in part. \n"
       ]
     },
     {
