updated sql scripts and its assets and deployment scripts

--- a/retail/artifacts/notebooks/1_Retail_Sales_Prediction.ipynb
+++ b/retail/artifacts/notebooks/1_Retail_Sales_Prediction.ipynb
@@ -109,6 +109,8 @@
         }
       ],
       "source": [
+        "# ∗∗∗∗∗∗∗∗∗∗ Important – Do not use in production, for demonstration purposes only – please review the legal notices before continuing ∗∗∗∗∗\n",
+        "\n",
         "import azureml.core\n",
         "import pandas as pd\n",
         "\n",
