--- a/retail/artifacts/notebooks/Customer_Churn.ipynb
+++ b/retail/artifacts/notebooks/Customer_Churn.ipynb
@@ -48,6 +48,8 @@
         }
       ],
       "source": [
+        "# ∗∗∗∗∗∗∗∗∗∗ Important – Do not use in production, for demonstration purposes only – please review the legal notices before continuing ∗∗∗∗∗\n",
+        "\n",
         "from pyspark.sql import SparkSession\n",
         "import matplotlib.pyplot as plt \n",
         "import seaborn as sns\n",
