--- a/retail/artifacts/notebooks/Customer_Segmentation_RFM_Analysis.ipynb
+++ b/retail/artifacts/notebooks/Customer_Segmentation_RFM_Analysis.ipynb
@@ -62,6 +62,8 @@
         }
       ],
       "source": [
+        "# ∗∗∗∗∗∗∗∗∗∗ Important – Do not use in production, for demonstration purposes only – please review the legal notices before continuing ∗∗∗∗∗\n",
+        "\n",
         "# import libraries\n",
         "from datetime import datetime, timedelta\n",
         "import pandas as pd\n",
