--- a/retail/artifacts/notebooks/Notebook 1.ipynb
+++ b/retail/artifacts/notebooks/Notebook 1.ipynb
@@ -27,6 +27,8 @@
         }
       ],
       "source": [
+        "# ∗∗∗∗∗∗∗∗∗∗ Important – Do not use in production, for demonstration purposes only – please review the legal notices before continuing ∗∗∗∗∗\n",
+        "\n",
         "%%pyspark\n",
         "df = spark.read.load('abfss://customer-churn-data@#STORAGE_ACCOUNT_NAME#.dfs.core.windows.net/CustomerChurn.csv', format='csv'\n",
         "## If header exists uncomment line below\n",
