--- a/retail/artifacts/notebooks/Campaign Analytics DataPrep.ipynb
+++ b/retail/artifacts/notebooks/Campaign Analytics DataPrep.ipynb
@@ -42,6 +42,8 @@
         }
       ],
       "source": [
+        "# ∗∗∗∗∗∗∗∗∗∗ Important – Do not use in production, for demonstration purposes only – please review the legal notices before continuing ∗∗∗∗∗\n",
+        "\n",
         "%%pyspark\n",
         "data_path = spark.read.load('abfss://marketingdb-staging@#STORAGE_ACCOUNT_NAME#.dfs.core.windows.net/CampaignAnalytics.csv', format='csv',header=True)\n",
         "data_path.show(10)"
