updated synapse notebooks

--- a/retail/artifacts/notebooks/2_Campaign Analytics DataPrep.ipynb
+++ b/retail/artifacts/notebooks/2_Campaign Analytics DataPrep.ipynb
@@ -8,6 +8,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      },
+      "source": [
+        "**Important – Do not use in production, for demonstration purposes only – please review the legal notices before continuing**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
@@ -42,8 +55,6 @@
         }
       ],
       "source": [
-        "# ∗∗∗∗∗∗∗∗∗∗ Important – Do not use in production, for demonstration purposes only – please review the legal notices before continuing ∗∗∗∗∗\n",
-        "\n",
         "%%pyspark\n",
         "data_path = spark.read.load('abfss://marketingdb-staging@#STORAGE_ACCOUNT_NAME#.dfs.core.windows.net/CampaignAnalytics.csv', format='csv',header=True)\n",
         "data_path.show(10)"
