--- a/retail/artifacts/notebooks/3_Customer_Segmentation_RFM_Analysis_v02.ipynb
+++ b/retail/artifacts/notebooks/3_Customer_Segmentation_RFM_Analysis_v02.ipynb
@@ -24,6 +24,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      },
+      "source": [
+        "**Important – Do not use in production, for demonstration purposes only – please review the legal notices before continuing**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -66,8 +79,6 @@
         }
       ],
       "source": [
-        "# ∗∗∗∗∗∗∗∗∗∗ Important – Do not use in production, for demonstration purposes only – please review the legal notices before continuing ∗∗∗∗∗\n",
-        "\n",
         "# import libraries\n",
         "from datetime import datetime, timedelta\n",
         "import pandas as pd\n",
