--- a/retail/artifacts/notebooks/AutoML Number of Customer.ipynb
+++ b/retail/artifacts/notebooks/AutoML Number of Customer.ipynb
@@ -44,6 +44,19 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      },
+      "source": [
+        "**Important – Do not use in production, for demonstration purposes only – please review the legal notices before continuing**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {},
       "source": [
         "## Introduction\n",
@@ -101,8 +114,6 @@
       },
       "outputs": [],
       "source": [
-        "# ∗∗∗∗∗∗∗∗∗∗ Important – Do not use in production, for demonstration purposes only – please review the legal notices before continuing ∗∗∗∗∗\n",
-        "\n",
         "%%pyspark\n",
         "from azureml.train.automl import AutoMLConfig\n",
         "# from azureml.widgets import RunDetails\n",
