--- a/retail/artifacts/amlnotebooks/12a Safety Incident Reports Form Recognizer.ipynb
+++ b/retail/artifacts/amlnotebooks/12a Safety Incident Reports Form Recognizer.ipynb
@@ -2,6 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "# Azure Form Recognizer\n",
         "\n",
@@ -21,18 +22,41 @@
         "+ Preprocess the JSON files to extract only relevant information.\n",
         "\n",
         "+ Push the JSON files to a container under an azure storage account."
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Importing Relevant Libraries"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: azure-storage-blob==2.1.0 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (2.1.0)\n",
+            "Requirement already satisfied: azure-common>=1.1.5 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-blob==2.1.0) (1.1.25)\n",
+            "Requirement already satisfied: azure-storage-common~=2.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-blob==2.1.0) (2.1.0)\n",
+            "Requirement already satisfied: python-dateutil in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.8.0)\n",
+            "Requirement already satisfied: requests in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.23.0)\n",
+            "Requirement already satisfied: cryptography in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.7)\n",
+            "Requirement already satisfied: six>=1.5 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from python-dateutil->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.14.0)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.24.2)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.8)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (3.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2019.11.28)\n",
+            "Requirement already satisfied: cffi!=1.11.3,>=1.8 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from cryptography->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.12.3)\n",
+            "Requirement already satisfied: asn1crypto>=0.21.0 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from cryptography->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.0.1)\n",
+            "Requirement already satisfied: pycparser in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from cffi!=1.11.3,>=1.8->cryptography->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.19)\n"
+          ]
+        }
+      ],
       "source": [
         "# Please install this specific version of azure storage blob compatible with this notebook.\n",
         "!pip install azure-storage-blob==2.1.0\n",
@@ -47,27 +71,22 @@
         "from os import listdir\n",
         "from os.path import isfile, join\n",
         "import shutil\n",
-        "import pickle"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "Requirement already satisfied: azure-storage-blob==2.1.0 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (2.1.0)\nRequirement already satisfied: azure-common>=1.1.5 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-blob==2.1.0) (1.1.25)\nRequirement already satisfied: azure-storage-common~=2.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-blob==2.1.0) (2.1.0)\nRequirement already satisfied: python-dateutil in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.8.0)\nRequirement already satisfied: requests in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.23.0)\nRequirement already satisfied: cryptography in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.7)\nRequirement already satisfied: six>=1.5 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from python-dateutil->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.14.0)\nRequirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.24.2)\nRequirement already satisfied: idna<3,>=2.5 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.8)\nRequirement already satisfied: chardet<4,>=3.0.2 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (3.0.4)\nRequirement already satisfied: certifi>=2017.4.17 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from requests->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2019.11.28)\nRequirement already satisfied: cffi!=1.11.3,>=1.8 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from cryptography->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.12.3)\nRequirement already satisfied: asn1crypto>=0.21.0 in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from cryptography->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (1.0.1)\nRequirement already satisfied: pycparser in /anaconda/envs/azureml_py36/lib/python3.6/site-packages (from cffi!=1.11.3,>=1.8->cryptography->azure-storage-common~=2.1->azure-storage-blob==2.1.0) (2.19)\n"
-        }
-      ],
-      "execution_count": 1,
-      "metadata": {}
+        "import pickle\n",
+        "import GlobalVariables as gv"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Create Local Folders"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# Create local directories if they don't exist\n",
         "# *input_forms* contains all the pdf files to be converted to json\n",
@@ -76,33 +95,33 @@
         "# *output_json* will contain all the converted json files\n",
         "if (not os.path.isdir(os.getcwd()+\"/output_json\")):\n",
         "    os.makedirs(os.getcwd()+\"/output_json\")"
-      ],
-      "outputs": [],
-      "execution_count": 2,
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Downloading the PDF forms from a container in azure storage"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "- Downloads all PDF forms from a container named *incidentreport* to a local folder *input_forms*"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "%%time\n",
         "# Downloading pdf files from a container named *incidentreport* to a local folder *input_forms*\n",
         "# Set up configs for blob storage\n",
-        "STORAGE_ACCOUNT_NAME = \"stcognitivesearch0001\"\n",
-        "STORAGE_ACCOUNT_ACCESS_KEY = \"GTFY+zmRUBnx630A0xeMh77Cc5a2Lde/j//zRyPcFnX4Rl9D1nF5NVLHcvKRutnRu9EoUXAnl79IiBcNXt7ing==\"\n",
+        "STORAGE_ACCOUNT_NAME = gv.STORAGE_ACCOUNT_NAME\n",
+        "STORAGE_ACCOUNT_ACCESS_KEY = gv.ACCOUNT_KEY\n",
         "STORAGE_CONTAINER_NAME = \"incidentreport\"\n",
         "\n",
         "# Instantiating a blob service object\n",
@@ -126,47 +145,47 @@
         "    # Keep trace of all the processed files at the end of your script (to keep track later)\n",
         "    with open('merged_log', 'wb') as f:\n",
         "        pickle.dump(merged_files, f)"
-      ],
-      "outputs": [],
-      "execution_count": 3,
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# Total number of forms to be converted to JSON\n",
         "files = [f for f in listdir(os.getcwd()+\"/input_forms\") if isfile(join(os.getcwd()+\"/input_forms\", f))]"
-      ],
-      "outputs": [],
-      "execution_count": 4,
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Querying the custom trained form recognizer model (PDF -> JSON)"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "- Converts PDF -> JSON by querying the trained custom model.\n",
         "- Preprocess the JSON file and extract only the relevant information."
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "%%time\n",
         "# Endpoint parameters for querying the custom trained form-recognizer model to return the processed JSON\n",
         "# Processes PDF files one by one and return CLEAN JSON files\n",
-        "endpoint = r\"https://demo-documents-recog.cognitiveservices.azure.com/\"\n",
+        "endpoint = gv.endpoint\n",
         "# Change if api key is expired\n",
-        "apim_key = \"6d530550dfa84971babceef7756c439f\"\n",
+        "apim_key = gv.credential\n",
         "# This model is the one trained on 5 forms\n",
-        "model_id = \"aeb499e7-5608-4655-8833-004762cfcf64\"\n",
+        "model_id = gv.model_id\n",
         "post_url = endpoint + \"/formrecognizer/v2.0-preview/custom/models/%s/analyze\" % model_id\n",
         "files = [f for f in listdir(os.getcwd()+\"/input_forms\") if isfile(join(os.getcwd()+\"/input_forms\", f))]\n",
         "params = {\"includeTextDetails\": True}\n",
@@ -246,32 +265,41 @@
         "            msg = \"GET analyze results failed:\\n%s\" % str(e)\n",
         "            print(msg)\n",
         "            quit()"
-      ],
-      "outputs": [],
-      "execution_count": 5,
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Upload the JSON files to a cotainer\n",
         "\n",
         "- Upload JSON files from local folder *output_json* to the container *formrecogoutput*"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# Total number of converted JSON\n",
         "files = [f for f in listdir(os.getcwd()+\"/output_json\") if isfile(join(os.getcwd()+\"/output_json\", f))]"
-      ],
-      "outputs": [],
-      "execution_count": 6,
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 384 µs, sys: 0 ns, total: 384 µs\n",
+            "Wall time: 390 µs\n"
+          ]
+        }
+      ],
       "source": [
         "%%time\n",
         "# Connect to the container for uploading the JSON files\n",
@@ -282,19 +310,13 @@
         "STORAGE_CONTAINER_NAME = \"formrecogoutput\"\n",
         "# Instantiating a blob service object\n",
         "blob_service = BlockBlobService(STORAGE_ACCOUNT_NAME, STORAGE_ACCOUNT_ACCESS_KEY)"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "CPU times: user 384 µs, sys: 0 ns, total: 384 µs\nWall time: 390 µs\n"
-        }
-      ],
-      "execution_count": 7,
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "%%time\n",
         "# Upload JSON files from local folder *output_json* to the container *formrecogoutput*\n",
@@ -303,10 +325,7 @@
         "for files in os.listdir(local_path):\n",
         "#     print(os.path.join(local_path,files))\n",
         "    blob_service.create_blob_from_path(STORAGE_CONTAINER_NAME, files, os.path.join(local_path,files))"
-      ],
-      "outputs": [],
-      "execution_count": 8,
-      "metadata": {}
+      ]
     }
   ],
   "metadata": {
@@ -314,21 +333,21 @@
       "name": "python3"
     },
     "kernelspec": {
-      "name": "python3",
+      "display_name": "Python 3",
       "language": "python",
-      "display_name": "Python 3"
+      "name": "python3"
     },
     "language_info": {
-      "name": "python",
-      "version": "3.6.9",
-      "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
         "version": 3
       },
-      "pygments_lexer": "ipython3",
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
       "nbconvert_exporter": "python",
-      "file_extension": ".py"
+      "pygments_lexer": "ipython3",
+      "version": "3.6.9"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
